crates/cli/tests/e2e/snapshots/cli_acceptance__analyze_summary_python.snap
---
source: crates/cli/tests/e2e/cli_acceptance.rs
expression: outcome.stdout
---
snapshot f6b6dcc98073ffac6abe3443e0083a47fa44935eba80e405c2a40835b76706a5
summary: 4 symbols, 4 edges, 2 files
current score: 20.7111
no violations
mode anchored: 1 candidate(s)
  candidate 1 score 6.2111 (1 move group(s))
mode greenfield: 1 candidate(s)
  candidate 1 score 5.7111 (1 move group(s))
