crates/cli/tests/e2e/snapshots/cli_acceptance__diff_current_anchored_rust.snap
---
source: crates/cli/tests/e2e/cli_acceptance.rs
expression: stdout
---
move cluster-0 :: rust -> workspace (cohesion gain)
move src/lib.rs :: rust/src -> workspace/cluster-0 (cohesion gain)
