crates/cli/tests/e2e/snapshots/cli_acceptance__tree_candidate_rust_depth2.snap
---
source: crates/cli/tests/e2e/cli_acceptance.rs
expression: outcome.stdout
---
rust [packageGroup]
  src [package]
    src/lib.rs [domain]
