crates/cli/tests/e2e/snapshots/cli_acceptance__violations_rust.snap
---
source: crates/cli/tests/e2e/cli_acceptance.rs
expression: stdout
---
visibility [violation] Shape :: `Shape` is exported at Package but needed only at File
visibility [violation] describe_shape :: `describe_shape` is exported at Package but needed only at File
visibility [violation] Rectangle :: `Rectangle` is exported at Package but needed only at File
visibility [violation] summarize :: `summarize` is exported at Package but needed only at File
